--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.qualcomm.com/" target="_blank"><img alt="Zhiffy logo"
-                    src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+                    src="/assets/img/Qualcomm.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -343,7 +343,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.lactalis.ca/" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                    src="/assets/img/Lactalis.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
