--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Divya Kaur | Software Developer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -150,6 +150,16 @@
         <a aria-label="Open Divya's resume in a new tab" href="https://divyaK15.github.io/assets/resume/DivyaKaurResume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
+
+      <li class="bold">
+        <!-- 
+        1. mdi-communication-contacts
+        2. mdi-content-mail
+        3. mdi-communication-email
+        -->
+        <a aria-label="Navigate to the Places Travelled section" href="#placestravelled" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Places Travelled</span></a>
+      </li>
     </ul>
   </nav>
 
@@ -196,6 +206,10 @@
         <a aria-label="Open Divya's Resume in a new tab"
           href="https://drive.google.com/file/d/1Bo3PwsA0_Aarhe2DQ9afOh39TIIBXRU_/view?usp=drive_link" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Places Travelled section" href="#placestravelled" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Places Travelled</span></a>
       </li>
     </ul>
   </nav>
@@ -993,6 +1007,14 @@
         </p>
       </div>
     </section>
+
+    <section id="placestravelled" class="section scrollspy full-height">
+      <h3 class="page-title white-text teal">Places Travelled</h3>
+      <div class="container">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=10AfOTNYeJcrPnMkoMtUbSDxY4RcCYZw&ehbc=2E312F" width="640" height="480"></iframe>
+      </div>
+    </section>
+    
   </main>
 
   <!-- typed.js -->
