update travel logo

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         3. mdi-communication-email
         -->
         <a aria-label="Navigate to the Places Travelled section" href="#placestravelled" class="waves-effect waves-dark teal-text"><i
-            class="mdi-account-location small"></i><span>Places Travelled</span></a>
+            class="mdi-communication-location-on small"></i><span>Places Travelled</span></a>
       </li>
     </ul>
   </nav>
